# py_queens

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml  queens.py  queens_board.json  test_board.txt
games/: queens_559.json  queens_board.json  test_board.json
helpers/: __init__.py  helpers.py
