[project]
name = "py-queens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pygame>=2.5.2",
  "pygbag>=0.9.2",
  "Pillow>=10.2.0",
  "pymunk>=6.5.0",
  "matplotlib>=3.10.7",
  "asttokens>=3.0.0",
  "ipython>=9.6.0",
  "comm>=0.2.3",
  "ipywidgets>=8.1.8",
  "ipympl>=0.9.8",
]
